# recesser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  apiserver.Dockerfile  apiserver.local.env  build-images.sh  cli.local.env  compose.yaml  justfile  load-images.sh  local.env  schandler.Dockerfile  schandler.local.env  server.Dockerfile  server.local.env  skaffold.yaml  smoke-test.sh
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  security_audit.yml
apiserver/: Cargo.toml  openapi.yaml
apiserver/src/: auth.rs  database.rs  encryption.rs  error.rs  kubernetes.rs  logging.rs  main.rs  objectstorage.rs  routes.rs  secretstorage.rs  settings.rs
apiserver/src/database/: metadata.rs  repository.rs  user.rs
apiserver/src/routes/: artifact.rs  delete.rs  download.rs  list.rs  repository.rs  upload.rs  user.rs
apiserver/src/routes/artifact/: delete.rs  download.rs  upload.rs
cli/: Cargo.toml
cli/src/: commands.rs  compress.rs  http.rs  main.rs  parser.rs  settings.rs  ssh.rs  ssh_keys.rs
cli/src/commands/: artifact.rs  repository.rs  user.rs
core/: Cargo.toml
core/src/: encoding.rs  encryption.rs  handle.rs  hash.rs  lib.rs  metadata.rs  repository.rs  user.rs
manifests/argo_workflows/: kustomization.yaml  rbac.yaml
manifests/minio/: kustomization.yaml  values.yaml
manifests/mongo/: kustomization.yaml  statefulset.yaml
manifests/recesser/: apiserver.yaml  kustomization.yaml  namespace.yaml  schandler.yaml
manifests/vault/: kustomization.yaml  provision-dev.sh  values.yaml
schandler/: Cargo.toml
schandler/src/: apiserver.rs  argo_workflow.rs  argo_workflows.rs  kubernetes.rs  lib.rs  main.rs  pipeline.rs  repository.rs  settings.rs  workflow.rs
schandler/src/argo_workflows/: template.rs
schandler/src/argo_workflows/templates/: template_workflow.yml.j2
schandler/src/kubernetes/: argo_workflows.rs  template.rs
schandler/src/kubernetes/templates/: ssh_private_key.yml.j2  template_workflow.yml.j2
schandler/src/pipeline/: git.rs  poll.rs  transform.rs
schandler/tests/: argo_workflow.rs  pipeline.rs  workflow.rs
schandler/tests/common/: mod.rs
schandler/tests/fixtures/: custom_pipeline.yml  custom_workflow.yml  template_pipeline.yml  template_workflow.yml
server/: Cargo.toml
server/src/: database.rs  error.rs  file.rs  main.rs  objectstorage.rs  pipeline.rs  routes.rs  settings.rs
server/src/pipeline/: git.rs  poll.rs  submit.rs
server/src/routes/: delete.rs  download.rs  list.rs  upload.rs
source_code_handler/: Cargo.toml
source_code_handler/src/pipeline/: submit.rs
template-executors/python-tensorflow/: Dockerfile  Makefile  entrypoint.sh  smoke-test.sh
