[package]
name = "recesser-apiserver"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
actix-web  = { version = "4.0", default-features = false, features = ["macros"]}
actix-multipart = "0.4.0"
actix-files = "0.6.0"
tokio = { version = "1.15", features = ["fs"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.1.0"
rust-s3  = { version = "0.28", default-features = false, features = ["tokio-rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.3"
env_logger = "0.9"
log = "0.4"
config = "0.11"
async-trait = "0.1"
