[package]
name = "recesser-apiserver"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
repository = "https://github.com/recesser/recesser"
license = "MIT"
edition = "2021"

[[bin]]
name = "apiserver"
path = "src/main.rs"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
actix-web  = { version = "4.0", default-features = false, features = ["macros"]}
actix-multipart = "0.4"
actix-files = "0.6"
actix-web-httpauth = "0.6"
tokio = { version = "1.15", features = ["fs"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.1.0"
rust-s3  = { version = "0.30", default-features = false, features = ["tokio-rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.3"
tracing-actix-web = "0.5"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing = "0.1"
config = "0.12"
ring = { version = "0.16", default-features = false, features = ["std"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
mime = "0.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls-native-roots", "json"]
