[package]
name = "recesser-cli"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[[bin]]
name = "rcssr"
path = "src/main.rs"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.11"
log = "0.4"
env_logger = "0.9"
tempfile = "3.3"
