[package]
name = "recesser-core"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = { version = "1.3", features = ["rayon"] }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
chrono = { version = "0.4", features = ["serde"] }
bincode = "2.0.0-rc.1"
