[package]
name = "recesser-schandler"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[[bin]]
name = "schandler"
path = "src/main.rs"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
git2 = { version = "0.14", features = ["vendored-openssl"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
tempfile = "3.3"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing = "0.1"
config = "0.12"
