[package]
name = "recesser-schandler"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
repository = "https://github.com/recesser/recesser"
license = "MIT"
edition = "2021"

[[bin]]
name = "schandler"
path = "src/main.rs"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "1.11"
anyhow = "1.0"
tempfile = "3.3"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing = "0.1"
config = "0.12"
minijinja = "0.15"
lazy_static = "1.4"

[dependencies.git2]
version = "0.14"
default-features = false
features = ["ssh", "ssh_key_from_memory", "vendored-openssl", "vendored-libgit2", "zlib-ng-compat"]

[dev-dependencies]
jsonschema = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
