[package]
name = "recesser-server"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
anyhow = "1.0"
thiserror = "1.0"
rust-s3 = "0.28"
blake3 = "1.3"
base64 = "0.13"
actix-web = "4.0.0-beta.19"
actix-multipart = "0.4.0-beta.12"
futures-util = "0.3"
tempfile = "3.3"
tokio = { version = "1.15", features = ["fs"] }
uuid = { version = "0.8", features = ["v4"] }
redis = { version = "0.21", features = ["tokio-comp"] }
env_logger = "0.9"
