[package]
name = "recesser-server"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
recesser-core = { version = "0.1", path = "../core" }
anyhow = "1.0"
thiserror = "1.0"
rust-s3 = "0.28"
actix-web = "4.0.0-beta.20"
actix-multipart = "0.4.0-beta.12"
actix-files = "0.6.0-beta.14"
futures-util = "0.3"
tempfile = "3.3"
tokio = { version = "1.15", features = ["fs"] }
redis = { version = "0.21", features = ["tokio-comp"] }
env_logger = "0.9"
