[package]
name = "recesser-source-code-handler"
version = "0.1.0"
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
git2 = { version = "0.13", features = ["vendored-openssl"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "json"] }
